partial/force-app/main/default/objects/Selling__c/Selling__c.object-meta.xml
<CustomObject>
    <label>Selling</label>
    <nameField>
        <label>Selling Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Sales</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>