partial/force-app/main/default/objects/Selling__c/fields/Account_Paid__c.field-meta.xml
<CustomField>
    <fullName>Account_Paid__c</fullName>
    <label>Account Paid</label>
    <type>Date</type>
</CustomField>