partial/force-app/main/default/objects/Selling__c/fields/Agency_Id__c.field-meta.xml
<CustomField>
    <fullName>Agency_Id__c</fullName>
    <label>Agency Id</label>
    <length>30</length>
    <type>Text</type>
</CustomField>