partial/force-app/main/default/objects/Selling__c/fields/Agreement_Expiry__c.field-meta.xml
<CustomField>
    <fullName>Agreement_Expiry__c</fullName>
    <label>Agreement Expiry</label>
    <type>Date</type>
</CustomField>