partial/force-app/main/default/objects/Selling__c/fields/Decoration__c.field-meta.xml
<CustomField>
    <fullName>Decoration__c</fullName>
    <label>Decoration</label>
    <length>100</length>
    <type>Text</type>
</CustomField>