partial/force-app/main/default/objects/Selling__c/fields/Exchanged__c.field-meta.xml
<CustomField>
    <fullName>Exchanged__c</fullName>
    <label>Exchanged</label>
    <type>Date</type>
</CustomField>