partial/force-app/main/default/objects/Selling__c/fields/Exchanged_Company_Fee__c.field-meta.xml
<CustomField>
    <fullName>Exchanged_Company_Fee__c</fullName>
    <label>Exchanged Company Fee</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>