partial/force-app/main/default/objects/Selling__c/fields/Exchanged_Office_Id__c.field-meta.xml
<CustomField>
    <fullName>Exchanged_Office_Id__c</fullName>
    <label>Exchanged Office Id</label>
    <length>50</length>
    <type>Text</type>
</CustomField>