partial/force-app/main/default/objects/Selling__c/fields/Instructed__c.field-meta.xml
<CustomField>
    <fullName>Instructed__c</fullName>
    <label>Instructed</label>
    <type>Date</type>
</CustomField>