partial/force-app/main/default/objects/Selling__c/fields/Price_To__c.field-meta.xml
<CustomField>
    <fullName>Price_To__c</fullName>
    <label>Price To</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>