partial/force-app/main/default/objects/Selling__c/fields/Qualifier__c.field-meta.xml
<CustomField>
    <fullName>Qualifier__c</fullName>
    <label>Qualifier</label>
    <length>30</length>
    <type>Text</type>
</CustomField>