partial/force-app/main/default/objects/Selling__c/fields/Shared_Percentage__c.field-meta.xml
<CustomField>
    <fullName>Shared_Percentage__c</fullName>
    <label>Shared Percentage</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>