partial/force-app/main/default/objects/Selling__c/fields/Shared_Rent__c.field-meta.xml
<CustomField>
    <fullName>Shared_Rent__c</fullName>
    <label>Shared Rent</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>