partial/force-app/main/default/objects/Selling__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>UnderOffer</fullName>
            </value>
            <value>
                <fullName>ForSale</fullName>
            </value>
            <value>
                <fullName>Valuation</fullName>
            </value>
            <value>
                <fullName>PreAppraisal</fullName>
            </value>
            <value>
                <fullName>PaidValuation</fullName>
            </value>
            <value>
                <fullName>ForSaleUnavailable</fullName>
            </value>
            <value>
                <fullName>UnderOfferUnavailable</fullName>
            </value>
            <value>
                <fullName>Reserved</fullName>
            </value>
            <value>
                <fullName>Exchanged</fullName>
            </value>
            <value>
                <fullName>Completed</fullName>
            </value>
            <value>
                <fullName>SoldExternally</fullName>
            </value>
            <value>
                <fullName>Withdrawn</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>