partial/force-app/main/default/objects/Selling__c/fields/Tenure__c.field-meta.xml
<CustomField>
    <fullName>Tenure__c</fullName>
    <label>Tenure type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>freehold</fullName>
            </value>
            <value>
                <fullName>leasehold</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>