partial/force-app/main/default/objects/Selling__c/fields/Vendor_Id__c.field-meta.xml
<CustomField>
    <fullName>Vendor_Id__c</fullName>
    <label>Vendor Id</label>
    <length>30</length>
    <type>Text</type>
</CustomField>