partial/force-app/main/default/objects/Selling__c/recordTypes/Selling.recordType-meta.xml
<RecordType>
    <fullName>Selling</fullName>
    <active>true</active>
    <label>Selling</label>
</RecordType>